--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ log = "0.3"
 lazy_static = "0.2"
 assert = "0.7"
 csv = "0.15"
+piston_window = "*"
+gfx_text = "*"
+freetype-rs = "*"
+gfx_core = "*"
 
 [dev-dependencies]
 quickcheck = "0.4"
